<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostalCodeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_postal_code"
        android:contentDescription="@string/Enter_your_postal_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPostalCodeHeader"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_postal_code"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textViewPostalCodeDetails"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Postal_code_details"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostalCodeHeader"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextPostalCode"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postalCodeHint"
        android:autofillHints="@string/idHint"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostalCodeDetails"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonNext"
        tools:text="@string/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostalCode" />

</androidx.constraintlayout.widget.ConstraintLayout>