<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdNumberActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_identity"
        android:contentDescription="@string/Enter_your_identification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIdHeader"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_identification"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textViewIdDetails"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Identification_details"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewIdHeader"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextId"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idHint"
        android:autofillHints="@string/idHint"
        app:layout_constraintTop_toBottomOf="@+id/textViewIdDetails"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonNext"
        tools:text="@string/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextId" />

</androidx.constraintlayout.widget.ConstraintLayout>