<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsOfUseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTermsOfUse"
                android:text="@string/Terms_of_use"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonAgree"
                android:text="@string/Agree"
                android:onClick="agree"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/textViewTermsOfUse"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonDisagree"
                android:text="@string/Disagree"
                android:textColor="?attr/colorPrimary"
                android:onClick="disagree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/textViewTermsOfUse"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>